--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -1,6 +1,6 @@
 .nav-bar {
 	background: #181818;
-	width: 60px;
+	width: 65px;
 	height: 100%;
 	position: absolute;
 	top: 0;
@@ -91,9 +91,9 @@
 			}
 		}
 
-		a.portfolio-link {
+		a.projects-link {
 			&:after {
-				content: 'PORTFOLIO';
+				content: 'PROJECTS';
 			}
 		}
 
