--- a/src/components/Home/Logo/index.scss
+++ b/src/components/Home/Logo/index.scss
@@ -2,7 +2,6 @@
 	z-index: 0;
 	width: 400px;
 	height: 609px;
-	opacity: 0;
 	position: absolute;
 	top: 0;
 	right: 15%;
@@ -10,11 +9,12 @@
 	left: auto;
 	margin: auto;
 
-	svg {
+
+	img {
 		width: 100%;
 		height: auto;
 		bottom: 0;
-
+		animation: fadeIn 1s 2s backwards;
 	}
 
 	.solid-logo {
@@ -25,13 +25,7 @@
 		left: 0;
 		margin: auto;
 		width: 100%;
-		opacity: 0;
-
 		z-index: 1;
-	}
-}
 
-.svg-container {
-	stroke: #ffd700;
-	stroke-width: 10;
+	}
 }
