--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -6,6 +6,7 @@
 		transform: translateY(-50%);
 		width: 40%;
 		max-height: 90%;
+		cursor: default;
 	}
 
 	h1 {
@@ -17,7 +18,6 @@
 		font-weight: 400;
 
 		&:before {
-			content: '<h1>';
 			font-family: 'La Belle Aurore', cursive;
 			color: #ffd700;
 			font-size: 18px;
@@ -28,7 +28,6 @@
 		}
 
 		&:after {
-			content: '<h1/>';
 			font-family: 'La Belle Aurore', cursive;
 			color: #ffd700;
 			font-size: 18px;
