--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -2,6 +2,7 @@
 	width: 100%;
 	height: 100%;
 	position: absolute;
+	cursor: default;
 }
 
 .top-tags {
@@ -53,7 +54,7 @@
 		left: -10px;
 
 		&:before {
-			content: '<h1>';
+
 			font-family: 'La Belle Aurore', cursive;
 			color: #ffd700;
 			font-size: 18px;
@@ -65,7 +66,7 @@
 		}
 
 		&:after {
-			content: '<h1/>';
+
 			font-family: 'La Belle Aurore', cursive;
 			color: #ffd700;
 			font-size: 18px;
