--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,10 @@ body {
   margin: 0;
   font-family: 300 11px/1.4 'Helvetica Neue', sans-serif;
   color: #444;
-  background: #022c43;
+  background: #232f55;
   overflow: hidden;
   display: block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
