--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -59,3 +59,14 @@
 	font-size: 25px;
 	color: #fff;
 }
+
+@media screen and (max-width: 1200px) {
+	.text-contact {
+		position: initial;
+		transform: none;
+		width: 100%;
+		display: block;
+		padding: 20px;
+		box-sizing: border-box;
+	}
+}
