--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,16 @@ body {
   background: #232f55;
   overflow: hidden;
   display: block;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 
+}
+
+.dashboard {
+  margin-top: 200px;
+  margin-left: 200px;
+}
+
+@media screen and (max-width: 1200px) {
+  body {
+    overflow: visible;
+  }
 }
