--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -72,7 +72,37 @@
 	}
 }
 
+.logo-container {
+	z-index: 0;
+	width: 400px;
+	height: 609px;
+	position: absolute;
+	top: 0;
+	right: 15%;
+	bottom: 0;
+	left: auto;
+	margin: auto;
 
+
+	img {
+		width: 100%;
+		height: auto;
+		bottom: 0;
+		animation: fadeIn 1s 2s backwards;
+	}
+
+	.solid-logo {
+		position: absolute;
+		top: auto;
+		right: auto;
+		bottom: auto;
+		left: 0;
+		margin: auto;
+		width: 100%;
+		z-index: 1;
+
+	}
+}
 
 @media screen and (max-width: 1200px) {
 
@@ -99,7 +129,7 @@
 
 	.logo-container {
 		position: relative;
-		width: 100px;
+		width: 200px;
 		height: auto;
 		top: 50px;
 		right: 0;
@@ -108,7 +138,7 @@
 		left: 0;
 	}
 
-	.logo-container svg {
+	.logo-container img {
 		position: absolute;
 		top: auto;
 		right: auto;
@@ -116,4 +146,5 @@
 		left: 0;
 		margin: auto;
 	}
+
 }
